--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ar.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ar.properties
@@ -18756,6 +18756,7 @@ vocabularies-are-needed-to-create-categories=يلزم وجود مفردات لإ
 vocabularies-help=يمثل قائمة المفردات التي يتم عرضها في التنقل بين الفئات.
 vocabularies-without-categories-are-hidden-from-navigation-menus=يتم إخفاء المفردات بدون فئات من قوائم التنقل.
 vocabulary=إضافة المفردات
+vocabulary-visibility=Vocabulary Visibility (Automatic Copy)
 void=باطل
 volume=حجم
 vote=صوت
