--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
@@ -18758,6 +18758,7 @@ vocabularies-are-needed-to-create-categories=Calen vocabularis per crear categor
 vocabularies-help=Representa la llista de vocabularis que es mostren a la Navegació de categories.
 vocabularies-without-categories-are-hidden-from-navigation-menus=Els vocabularis sense categories s'amaguen als menús de navegació.
 vocabulary=Per al vocabulari
+vocabulary-visibility=Vocabulary Visibility (Automatic Copy)
 void=Nul
 volume=Volum
 vote=Vot
