--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_da.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_da.properties
@@ -18756,6 +18756,7 @@ vocabularies-are-needed-to-create-categories=Ordforråd er nødvendige for at op
 vocabularies-help=Represents the list of vocabularies that are displayed in the Categories Navigation. (Automatic Copy)
 vocabularies-without-categories-are-hidden-from-navigation-menus=Vocabularies without categories are hidden from Navigation Menus. (Automatic Copy)
 vocabulary=Til ordforråd
+vocabulary-visibility=Vocabulary Visibility (Automatic Copy)
 void=Void (Automatic Copy)
 volume=Volumen
 vote=Stemme
