--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
@@ -18758,6 +18758,7 @@ vocabularies-are-needed-to-create-categories=Für das Erstellen von Kategorien s
 vocabularies-help=Stellt die Liste von Vokabularen dar, die in der Kategorienavigation angezeigt werden.
 vocabularies-without-categories-are-hidden-from-navigation-menus=Vokabeln ohne Kategorien werden aus den Navigationsmenüs ausgeblendet.
 vocabulary=Zum Vokabular
+vocabulary-visibility=Vocabulary Visibility (Automatic Copy)
 void=Ungültig
 volume=Volumen
 vote=Stimme
