--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_el.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_el.properties
@@ -18756,6 +18756,7 @@ vocabularies-are-needed-to-create-categories=Τα λεξιλόγια είναι 
 vocabularies-help=Αναπαριστά τη λίστα λεξιλογίου που εμφανίζονται στην περιήγηση κατηγοριών. (Automatic Translation)
 vocabularies-without-categories-are-hidden-from-navigation-menus=Vocabularies without categories are hidden from Navigation Menus. (Automatic Copy)
 vocabulary=Στο λεξιλόγιο
+vocabulary-visibility=Vocabulary Visibility (Automatic Copy)
 void=Void (Automatic Copy)
 volume=Τόμος
 vote=Ψήφος
