--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_et.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_et.properties
@@ -18756,6 +18756,7 @@ vocabularies-are-needed-to-create-categories=Kategooriate loomiseks on vaja sõn
 vocabularies-help=Tähistab kategooriate navigeerimispaanil kuvatavat sõnastike loendit. (Automatic Translation)
 vocabularies-without-categories-are-hidden-from-navigation-menus=Vocabularies without categories are hidden from Navigation Menus. (Automatic Copy)
 vocabulary=Sõnavarale
+vocabulary-visibility=Vocabulary Visibility (Automatic Copy)
 void=Void (Automatic Copy)
 volume=Helitugevus
 vote=Vasta
