--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fa.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fa.properties
@@ -18756,6 +18756,7 @@ vocabularies-are-needed-to-create-categories=واژگان برای ایجاد د
 vocabularies-help=نشان دهنده فهرست واژگانی است که در پیمایش دسته ها نمایش داده می شوند. (Automatic Translation)
 vocabularies-without-categories-are-hidden-from-navigation-menus=Vocabularies without categories are hidden from Navigation Menus. (Automatic Copy)
 vocabulary=واژه
+vocabulary-visibility=Vocabulary Visibility (Automatic Copy)
 void=Void (Automatic Copy)
 volume=حجم
 vote=رای
