--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
@@ -18754,6 +18754,7 @@ vocabularies-are-needed-to-create-categories=Sanastoja tarvitaan luokkien luomis
 vocabularies-help=Edustaa sitä sanastojen luetteloa, joka näytetään luokkanavigaatiossa.
 vocabularies-without-categories-are-hidden-from-navigation-menus=Sanastot ilman luokkaa piilotetaan navigointivalikoista.
 vocabulary=Sanastoon
+vocabulary-visibility=Vocabulary Visibility (Automatic Copy)
 void=Mitätön
 volume=Tilavuus
 vote=Äänestä
