--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr.properties
@@ -18758,6 +18758,7 @@ vocabularies-are-needed-to-create-categories=Les vocabulaires sont nécessaires 
 vocabularies-help=Représente la liste des vocabulaires affichée dans Navigation par catégorie.
 vocabularies-without-categories-are-hidden-from-navigation-menus=Les vocabulaires sans catégories sont masqués dans les menus de navigation.
 vocabulary=Au vocabulaire
+vocabulary-visibility=Vocabulary Visibility (Automatic Copy)
 void=Nul
 volume=Volume
 vote=Voter
