--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr_CA.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr_CA.properties
@@ -18756,6 +18756,7 @@ vocabularies-are-needed-to-create-categories=Les vocabulaires sont nécessaires 
 vocabularies-help=Représente la liste des vocabulaires affichée dans Navigation par catégorie.
 vocabularies-without-categories-are-hidden-from-navigation-menus=Vocabularies without categories are hidden from Navigation Menus. (Automatic Copy)
 vocabulary=Au vocabulaire
+vocabulary-visibility=Vocabulary Visibility (Automatic Copy)
 void=Void (Automatic Copy)
 volume=Volume
 vote=Voter
