--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_gl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_gl.properties
@@ -18756,6 +18756,7 @@ vocabularies-are-needed-to-create-categories=Vocabularies are needed to create c
 vocabularies-help=Representa a lista de vocabularios que serán presentados na navegación por categorías.
 vocabularies-without-categories-are-hidden-from-navigation-menus=Vocabularies without categories are hidden from Navigation Menus. (Automatic Copy)
 vocabulary=Ao vocabulario
+vocabulary-visibility=Vocabulary Visibility (Automatic Copy)
 void=Void (Automatic Copy)
 volume=Volume
 vote=Votar
