--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hi_IN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hi_IN.properties
@@ -18756,6 +18756,7 @@ vocabularies-are-needed-to-create-categories=श्रेणियों को 
 vocabularies-help=श्रेणियों नेविगेशन में प्रदर्शित शब्दावली की सूची का प्रतिनिधित्व करता है। (Automatic Translation)
 vocabularies-without-categories-are-hidden-from-navigation-menus=Vocabularies without categories are hidden from Navigation Menus. (Automatic Copy)
 vocabulary=नया शब्दकोष बनाएँ
+vocabulary-visibility=Vocabulary Visibility (Automatic Copy)
 void=Void (Automatic Copy)
 volume=आयतन (Automatic Translation)
 vote=वोट
