--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hr.properties
@@ -18756,6 +18756,7 @@ vocabularies-are-needed-to-create-categories=Vocabularies are needed to create c
 vocabularies-help=Represents the list of vocabularies that are displayed in the Categories Navigation. (Automatic Copy)
 vocabularies-without-categories-are-hidden-from-navigation-menus=Vocabularies without categories are hidden from Navigation Menus. (Automatic Copy)
 vocabulary=Za Rječnik
+vocabulary-visibility=Vocabulary Visibility (Automatic Copy)
 void=Void (Automatic Copy)
 volume=Volumen
 vote=Glasaj
