--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
@@ -18759,6 +18759,7 @@ vocabularies-are-needed-to-create-categories=A kategóriák létrehozásához sz
 vocabularies-help=A szótárak listáját képviseli, amelyek a Kategóriák navigációjában jelennek meg.
 vocabularies-without-categories-are-hidden-from-navigation-menus=A kategóriák nélküli szótárak rejtve vannak a navigációs menük elől.
 vocabulary=Szótár
+vocabulary-visibility=Vocabulary Visibility (Automatic Copy)
 void=Érvénytelenítve
 volume=Térfogat
 vote=Szavazás
