--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_in.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_in.properties
@@ -18756,6 +18756,7 @@ vocabularies-are-needed-to-create-categories=Kosakata diperlukan untuk membuat k
 vocabularies-help=Mewakili daftar kosakata yang ditampilkan dalam Navigasi Kategori. (Automatic Translation)
 vocabularies-without-categories-are-hidden-from-navigation-menus=Vocabularies without categories are hidden from Navigation Menus. (Automatic Copy)
 vocabulary=Untuk Vocabulary
+vocabulary-visibility=Vocabulary Visibility (Automatic Copy)
 void=Void (Automatic Copy)
 volume=Volume (Automatic Translation)
 vote=Suara
