--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
@@ -18757,6 +18757,7 @@ vocabularies-are-needed-to-create-categories=I vocabolari sono necessari per cre
 vocabularies-help=Rappresenta la lista dei vocabolari che vengono visualizzati nella navigazione per categorie.
 vocabularies-without-categories-are-hidden-from-navigation-menus=Vocabularies without categories are hidden from Navigation Menus. (Automatic Copy)
 vocabulary=Al Vocabolario
+vocabulary-visibility=Vocabulary Visibility (Automatic Copy)
 void=Void (Automatic Copy)
 volume=volume (Automatic Translation)
 vote=Voto
