--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_iw.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_iw.properties
@@ -18756,6 +18756,7 @@ vocabularies-are-needed-to-create-categories=אוצר צריכים ליצור ק
 vocabularies-help=מייצג את רשימת אוצרות המילים המוצגים בניווט הקטגוריות.
 vocabularies-without-categories-are-hidden-from-navigation-menus=Vocabularies without categories are hidden from Navigation Menus. (Automatic Copy)
 vocabulary=למילון
+vocabulary-visibility=Vocabulary Visibility (Automatic Copy)
 void=Void (Automatic Copy)
 volume=עוצמת קול
 vote=הצבעה
