--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lt.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lt.properties
@@ -18756,6 +18756,7 @@ vocabularies-are-needed-to-create-categories=Norint sukurti kategorijas, reikali
 vocabularies-help=Nurodo žodynų, rodomų kategorijų naršyme, sąrašą. (Automatic Translation)
 vocabularies-without-categories-are-hidden-from-navigation-menus=Vocabularies without categories are hidden from Navigation Menus. (Automatic Copy)
 vocabulary=Žodyną (Automatic Translation)
+vocabulary-visibility=Vocabulary Visibility (Automatic Copy)
 void=Void (Automatic Copy)
 volume=Apimtis (Automatic Translation)
 vote=Balsavimas (Automatic Translation)
