--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ms.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ms.properties
@@ -18756,6 +18756,7 @@ vocabularies-are-needed-to-create-categories=Volcabularies diperlukan untuk menc
 vocabularies-help=Represents the list of vocabularies that will be displayed in the Categories Navigation.
 vocabularies-without-categories-are-hidden-from-navigation-menus=Vocabularies without categories are hidden from Navigation Menus. (Automatic Copy)
 vocabulary=Perbendaharaan kata (Automatic Translation)
+vocabulary-visibility=Vocabulary Visibility (Automatic Copy)
 void=Void (Automatic Copy)
 volume=Kelantangan (Automatic Translation)
 vote=Mengundi (Automatic Translation)
