--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
@@ -18756,6 +18756,7 @@ vocabularies-are-needed-to-create-categories=Ordforråd er nødvendig for å opp
 vocabularies-help=Representerer listen over ordforråd som vises i kategorinavigasjonen. (Automatic Translation)
 vocabularies-without-categories-are-hidden-from-navigation-menus=Vocabularies without categories are hidden from Navigation Menus. (Automatic Copy)
 vocabulary=Til ordliste
+vocabulary-visibility=Vocabulary Visibility (Automatic Copy)
 void=Void (Automatic Copy)
 volume=Volum
 vote=Stemme
