--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
@@ -18759,6 +18759,7 @@ vocabularies-are-needed-to-create-categories=Om categorieën te maken, zijn woor
 vocabularies-help=Dit is de lijst met woordenlijsten die weergegeven worden in de navigatie voor categorieën.
 vocabularies-without-categories-are-hidden-from-navigation-menus=Woordenlijsten zonder categorieën worden verborgen in navigatiemenu's.
 vocabulary=Naar woordenlijst
+vocabulary-visibility=Vocabulary Visibility (Automatic Copy)
 void=Leeg
 volume=Volume
 vote=Stem
