--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pl.properties
@@ -18756,6 +18756,7 @@ vocabularies-are-needed-to-create-categories=Słownictwo są potrzebne do tworze
 vocabularies-help=Reprezentuje listę słowników wyświetlanych w nawigacji kategorii. (Automatic Translation)
 vocabularies-without-categories-are-hidden-from-navigation-menus=Vocabularies without categories are hidden from Navigation Menus. (Automatic Copy)
 vocabulary=Do słownika
+vocabulary-visibility=Vocabulary Visibility (Automatic Copy)
 void=Void (Automatic Copy)
 volume=Ilość
 vote=Głos
