--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
@@ -18756,6 +18756,7 @@ vocabularies-are-needed-to-create-categories=Vocabulários são necessário para
 vocabularies-help=Representa a lista de vocabulários exibidos na Navegação de Categorias.
 vocabularies-without-categories-are-hidden-from-navigation-menus=Os vocabulários sem categorias são ocultos nos Menus de Navegação.
 vocabulary=Ao vocabulário
+vocabulary-visibility=Vocabulary Visibility (Automatic Copy)
 void=Anulado
 volume=Volume
 vote=Votos
