--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_PT.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_PT.properties
@@ -18758,6 +18758,7 @@ vocabularies-are-needed-to-create-categories=Vocabulários são necessários par
 vocabularies-help=Representa a lista de vocabulários que serão apresentados na Navegação por Categorias.
 vocabularies-without-categories-are-hidden-from-navigation-menus=Vocabularies without categories are hidden from Navigation Menus. (Automatic Copy)
 vocabulary=Vocabulário
+vocabulary-visibility=Vocabulary Visibility (Automatic Copy)
 void=Void (Automatic Copy)
 volume=Volume (Automatic Copy)
 vote=Votar
