--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ro.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ro.properties
@@ -18756,6 +18756,7 @@ vocabularies-are-needed-to-create-categories=Vocabularele sunt necesare pentru a
 vocabularies-help=Reprezintă lista de vocabulare care sunt afișate în categorii de navigare. (Automatic Translation)
 vocabularies-without-categories-are-hidden-from-navigation-menus=Vocabularies without categories are hidden from Navigation Menus. (Automatic Copy)
 vocabulary=La Vocabular
+vocabulary-visibility=Vocabulary Visibility (Automatic Copy)
 void=Void (Automatic Copy)
 volume=Volum
 vote=Vot
