--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sk.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sk.properties
@@ -18756,6 +18756,7 @@ vocabularies-are-needed-to-create-categories=Na vytvorenie kategórií sú potre
 vocabularies-help=Predstavuje zoznam slovníkov, ktoré sa zobrazujú v navigácii kategórií. (Automatic Translation)
 vocabularies-without-categories-are-hidden-from-navigation-menus=Vocabularies without categories are hidden from Navigation Menus. (Automatic Copy)
 vocabulary=Do slovníka
+vocabulary-visibility=Vocabulary Visibility (Automatic Copy)
 void=Void (Automatic Copy)
 volume=Objem
 vote=Hlas
