--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sl.properties
@@ -18756,6 +18756,7 @@ vocabularies-are-needed-to-create-categories=Slovarji so potrebni za ustvarjanje
 vocabularies-help=Predstavlja seznam besednih zakladov, ki so prikazani v kategorijah Krmarjenje. (Automatic Translation)
 vocabularies-without-categories-are-hidden-from-navigation-menus=Vocabularies without categories are hidden from Navigation Menus. (Automatic Copy)
 vocabulary=Na slovar.
+vocabulary-visibility=Vocabulary Visibility (Automatic Copy)
 void=Void (Automatic Copy)
 volume=Glasnost.
 vote=Glas
