--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
@@ -18756,6 +18756,7 @@ vocabularies-are-needed-to-create-categories=Ordlistor behövs för att skapa ka
 vocabularies-help=Representerar ordlistan som visas i kategorinavigeringen.
 vocabularies-without-categories-are-hidden-from-navigation-menus=Ordlistor utan kategorier döljs från navigeringsmenyer.
 vocabulary=Till ordlista
+vocabulary-visibility=Vocabulary Visibility (Automatic Copy)
 void=Annullerad
 volume=Volym
 vote=Röst
