--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ta_IN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ta_IN.properties
@@ -18756,6 +18756,7 @@ vocabularies-are-needed-to-create-categories=Vocabularies are needed to create c
 vocabularies-help=பகுப்புகள் வழிசெலுத்து காட்டப்படும் தேர்வுகளை பட்டியல் குறிக்கிறது.
 vocabularies-without-categories-are-hidden-from-navigation-menus=Vocabularies without categories are hidden from Navigation Menus. (Automatic Copy)
 vocabulary=சொல்லகராதி
+vocabulary-visibility=Vocabulary Visibility (Automatic Copy)
 void=Void (Automatic Copy)
 volume=தொகுதி
 vote=வாக்கு
