--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_tr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_tr.properties
@@ -18756,6 +18756,7 @@ vocabularies-are-needed-to-create-categories=Kelime kelime kategorileri oluştur
 vocabularies-help=Kategoriler Gezintisi'nde görüntülenen kelimelerin listesini temsil eder. (Automatic Translation)
 vocabularies-without-categories-are-hidden-from-navigation-menus=Vocabularies without categories are hidden from Navigation Menus. (Automatic Copy)
 vocabulary=Kelimeye
+vocabulary-visibility=Vocabulary Visibility (Automatic Copy)
 void=Void (Automatic Copy)
 volume=Birim
 vote=Oyla
