--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_vi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_vi.properties
@@ -18756,6 +18756,7 @@ vocabularies-are-needed-to-create-categories=Từ vựng là cần thiết để
 vocabularies-help=Đại diện cho danh sách các từ vựng được hiển thị trong Điều hướng danh mục. (Automatic Translation)
 vocabularies-without-categories-are-hidden-from-navigation-menus=Vocabularies without categories are hidden from Navigation Menus. (Automatic Copy)
 vocabulary=Tới từ điển
+vocabulary-visibility=Vocabulary Visibility (Automatic Copy)
 void=Void (Automatic Copy)
 volume=Âm lượng
 vote=Bình chọn
