--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_TW.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_TW.properties
@@ -18757,6 +18757,7 @@ vocabularies-are-needed-to-create-categories=建立類別需要字彙。
 vocabularies-help=表示類別導航中顯示的字彙清單。
 vocabularies-without-categories-are-hidden-from-navigation-menus=Vocabularies without categories are hidden from Navigation Menus. (Automatic Copy)
 vocabulary=字彙
+vocabulary-visibility=Vocabulary Visibility (Automatic Copy)
 void=Void
 volume=容量
 vote=投票
