--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es_AR.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es_AR.properties
@@ -18758,6 +18758,7 @@ vocabularies-are-needed-to-create-categories=Los vocabularios se necesitan para 
 vocabularies-help=Representa la lista de vocabularios que se muestran en la navegación por categorías.
 vocabularies-without-categories-are-hidden-from-navigation-menus=Los vocabularios sin categorías se ocultan de los menús de navegación.
 vocabulary=Al vocabulario
+vocabulary-visibility=Vocabulary Visibility (Automatic Copy)
 void=Nulo
 volume=Volumen
 vote=Voto
