--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_CN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_CN.properties
@@ -18758,6 +18758,7 @@ vocabularies-are-needed-to-create-categories=创建类别需要词汇。
 vocabularies-help=表示类别导航中显示的词汇列表。
 vocabularies-without-categories-are-hidden-from-navigation-menus=导航菜单中会隐藏没有类别的词汇。
 vocabulary=访问词汇
+vocabulary-visibility=Vocabulary Visibility (Automatic Copy)
 void=无效
 volume=容量
 vote=投票
