--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
@@ -14300,7 +14300,7 @@ select-the-scope-of-the-action-that-this-role-can-perform-on-the-portal=Geltungs
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x=Geltungsbereich der Aktion auswählen, die diese Rolle in <em>{0}</em> ausführen darf.
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x-portlet=Geltungsbereich der Aktionen auswählen, die diese Rolle im Portlet <em>{0}</em> ausführen darf.
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x-resource=Geltungsbereich der Aktionen auswählen, die diese Rolle auf der Ressource <em>{0}</em> ausführen darf.
-select-the-scope-of-your-segment=Wählen Sie den Bereich Ihres Segments aus, um festzulegen, wo es verwendet werden kann.
+select-the-scope-of-your-segment-to-specify-where-it-can-be-used=Select the scope of your segment to specify where it can be used. It will not be possible to modify the scope after the segment is saved. (Automatic Copy)
 select-the-searchable-types-description=Wählen Sie die durchsuchbaren Typen aus. Wenn keine Typen ausgewählt sind, werden alle durchsuchbaren Typen (Assets und Objekte) durchsucht.
 select-the-sites-where-this-role-can-perform-the-x-action-on-the-x-portlet=Wählen Sie Sites aus, bei denen diese Rolle die Aktion <em>{0}</em> auf dem {1} Portlet ausführen darf.
 select-the-sites-where-this-role-can-perform-the-x-action-on-the-x-resource=Wählen Sie Sites aus, bei denen diese Rolle die Aktion <em>{0}</em> auf der Ressource {1} ausführen darf.
