--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_el.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_el.properties
@@ -14298,7 +14298,7 @@ select-the-scope-of-the-action-that-this-role-can-perform-on-the-portal=Επιλ
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x=Επιλογή εμβέλειας ενεργειών που αυτός ο ρόλος μπορεί να εκτελέσει στο <em>{0}</em>.
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x-portlet=Επιλογή εμβέλειας ενεργειών που αυτός ο ρόλος μπορεί να εκτελέσει στο portlet <em>{0}</em>.
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x-resource=Επιλογή εμβέλειας ενεργειών που αυτός ο ρόλος μπορεί να εκτελέσει στον πόρο <em>{0}</em>.
-select-the-scope-of-your-segment=Select the scope of your segment to specify where it can be used. (Automatic Copy)
+select-the-scope-of-your-segment-to-specify-where-it-can-be-used=Select the scope of your segment to specify where it can be used. It will not be possible to modify the scope after the segment is saved. (Automatic Copy)
 select-the-searchable-types-description=Select the assets and objects to be searched. If no types are selected, all are searched. To disable all types, disable the search framework indexer clauses setting. (Automatic Copy)
 select-the-sites-where-this-role-can-perform-the-x-action-on-the-x-portlet=Επιλογή των sites στα οποία αυτός ο ρόλος μπορεί να εκτελέσει την ενέργεια <em>{0}</em> στο portlet {1}.
 select-the-sites-where-this-role-can-perform-the-x-action-on-the-x-resource=Επιλογή των sites στα οποία αυτός ο ρόλος μπορεί να εκτελέσει την ενέργει <em>{0}</em> στον πόρο {1}.
