--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_gl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_gl.properties
@@ -14298,7 +14298,7 @@ select-the-scope-of-the-action-that-this-role-can-perform-on-the-portal=Seleccio
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x=Selecciona o alcance da acción que este rol pode levar a cabo en <em>{0}</em>.
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x-portlet=Selecciona o alcance da acción que este rol pode levar a cabo no portlet <em>{0}</em>.
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x-resource=Selecciona o alcance da acción que este rol pode levar a cabo no recurso <em>{0}</em>.
-select-the-scope-of-your-segment=Select the scope of your segment to specify where it can be used. (Automatic Copy)
+select-the-scope-of-your-segment-to-specify-where-it-can-be-used=Select the scope of your segment to specify where it can be used. It will not be possible to modify the scope after the segment is saved. (Automatic Copy)
 select-the-searchable-types-description=Select the assets and objects to be searched. If no types are selected, all are searched. To disable all types, disable the search framework indexer clauses setting. (Automatic Copy)
 select-the-sites-where-this-role-can-perform-the-x-action-on-the-x-portlet=Selecciona os sitios web donde este rol pode realizar a acción <em>{0}</em> no portlet {1}.
 select-the-sites-where-this-role-can-perform-the-x-action-on-the-x-resource=Seleccionar os sitios web nos que este rol pode realizar a acción <em>{0}</em> no recurso {1}.
