--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pl.properties
@@ -14298,7 +14298,7 @@ select-the-scope-of-the-action-that-this-role-can-perform-on-the-portal=Wybierz 
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x=Wybierz zakres działania, które ta rola może wykonywać na <em>{0}</em>.
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x-portlet=Wybierz zakres działania, które ta rola może wykonywać na portlecie <em>{0}</em>.
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x-resource=Wybierz zakres działania, które ta rola może wykonywać na zasobie <em>{0}</em>.
-select-the-scope-of-your-segment=Select the scope of your segment to specify where it can be used. (Automatic Copy)
+select-the-scope-of-your-segment-to-specify-where-it-can-be-used=Select the scope of your segment to specify where it can be used. It will not be possible to modify the scope after the segment is saved. (Automatic Copy)
 select-the-searchable-types-description=Select the assets and objects to be searched. If no types are selected, all are searched. To disable all types, disable the search framework indexer clauses setting. (Automatic Copy)
 select-the-sites-where-this-role-can-perform-the-x-action-on-the-x-portlet=Wybierz witryny, w których ta rola może wykonywać działanie <em>{0}</em> na portlecie {1}.
 select-the-sites-where-this-role-can-perform-the-x-action-on-the-x-resource=Wybierz witryny, w których ta rola może wykonywać działanie <em>{0}</em> na zasobie {1}.
