--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
@@ -14298,7 +14298,7 @@ select-the-scope-of-the-action-that-this-role-can-perform-on-the-portal=Selecion
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x=Selecionar o escopo da ação que esta função pode realizar em <em>{0}</em>.
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x-portlet=Selecionar o escopo da ação que esta função pode realizar no portlet <em>{0}</em>.
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x-resource=Selecionar o escopo da ação que esta função pode realizar no recurso <em>{0}</em>.
-select-the-scope-of-your-segment=Selecione o escopo de seu segmento para especificar onde ele pode ser usado.
+select-the-scope-of-your-segment-to-specify-where-it-can-be-used=Select the scope of your segment to specify where it can be used. It will not be possible to modify the scope after the segment is saved. (Automatic Copy)
 select-the-searchable-types-description=Selecione os tipos de buscáveis. Se nenhum tipo for selecionado, todos os tipos de buscáveis (conteúdo e objetos) serão buscados.
 select-the-sites-where-this-role-can-perform-the-x-action-on-the-x-portlet=Selecione os sites onde esta função pode realizar a ação <em>{0}</em> no portlet {1}.
 select-the-sites-where-this-role-can-perform-the-x-action-on-the-x-resource=Selecione os sites onde esta função pode realizar a ação <em>{0}</em> no recurso {1}.
