--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_bg.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_bg.properties
@@ -14298,7 +14298,7 @@ select-the-scope-of-the-action-that-this-role-can-perform-on-the-portal=Избе
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x=Изберете обхвата на действието, което тази роля може да изпълни върху <em>{0}</em>.
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x-portlet=Изберете обхвата на действието, което тази роля може да изпълни върху <em>{0}</em> портлет.
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x-resource=Изберете обхвата на действието, което тази роля може да изпълни върху <em>{0}</em> ресурс.
-select-the-scope-of-your-segment=Select the scope of your segment to specify where it can be used. (Automatic Copy)
+select-the-scope-of-your-segment-to-specify-where-it-can-be-used=Select the scope of your segment to specify where it can be used. It will not be possible to modify the scope after the segment is saved. (Automatic Copy)
 select-the-searchable-types-description=Select the assets and objects to be searched. If no types are selected, all are searched. To disable all types, disable the search framework indexer clauses setting. (Automatic Copy)
 select-the-sites-where-this-role-can-perform-the-x-action-on-the-x-portlet=Select the sites where this role can perform the <em>{0}</em> action on the {1} portlet. (Automatic Copy)
 select-the-sites-where-this-role-can-perform-the-x-action-on-the-x-resource=Select the sites where this role can perform the <em>{0}</em> action on the {1} resource. (Automatic Copy)
