--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_da.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_da.properties
@@ -14298,7 +14298,7 @@ select-the-scope-of-the-action-that-this-role-can-perform-on-the-portal=Vælg th
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x=Vælg the scope of the action that this role can perform on the <em>{0}</em>.
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x-portlet=Vælg the scope of the action that this role can perform on the <em>{0}</em> portlet.
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x-resource=Vælg the scope of the action that this role can perform on the <em>{0}</em> resource.
-select-the-scope-of-your-segment=Select the scope of your segment to specify where it can be used. (Automatic Copy)
+select-the-scope-of-your-segment-to-specify-where-it-can-be-used=Select the scope of your segment to specify where it can be used. It will not be possible to modify the scope after the segment is saved. (Automatic Copy)
 select-the-searchable-types-description=Select the assets and objects to be searched. If no types are selected, all are searched. To disable all types, disable the search framework indexer clauses setting. (Automatic Copy)
 select-the-sites-where-this-role-can-perform-the-x-action-on-the-x-portlet=Vælg the sites where this role can perform the <em>{0}</em> action on the {1} portlet.
 select-the-sites-where-this-role-can-perform-the-x-action-on-the-x-resource=Vælg the sites where this role can perform the <em>{0}</em> action on the {1} resource.
