--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es_AR.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es_AR.properties
@@ -14300,7 +14300,7 @@ select-the-scope-of-the-action-that-this-role-can-perform-on-the-portal=Seleccio
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x=Seleccione el ámbito de la acción que este rol puede llevar a cabo en <em>{0}</em>.
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x-portlet=Seleccione el ámbito de la acción que este rol puede llevar a cabo en el portlet <em>{0}</em>.
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x-resource=Seleccione el ámbito de la acción que este rol puede llevar a cabo en el recurso <em>{0}</em>.
-select-the-scope-of-your-segment=Select the scope of your segment to specify where it can be used. (Automatic Copy)
+select-the-scope-of-your-segment-to-specify-where-it-can-be-used=Select the scope of your segment to specify where it can be used. It will not be possible to modify the scope after the segment is saved. (Automatic Copy)
 select-the-searchable-types-description=Seleccione los tipos que admiten búsquedas. Si no selecciona ningún tipo, se realizarán búsquedas en todos los tipos que admiten búsquedas (activos y objetos).
 select-the-sites-where-this-role-can-perform-the-x-action-on-the-x-portlet=Seleccione los sitios web en los que este rol puede realizar la acción {0} en el portlet {1}.
 select-the-sites-where-this-role-can-perform-the-x-action-on-the-x-resource=Seleccione los sitios web en los que este rol puede realizar la acción {0} en el recurso {1}.
