--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_eu.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_eu.properties
@@ -14298,7 +14298,7 @@ select-the-scope-of-the-action-that-this-role-can-perform-on-the-portal=Aukeratu
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x=Aukeratu rol honek <em>{0}</em>-an egin dezakeen ekintza esparrua.
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x-portlet=Aukeratu rol honek <em>{0}</em> portletean egin dezakeen ekintza esparrua.
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x-resource=Aukeratu rol honek <em>{0}</em> baliabidean egin dezakeen ekintza esparrua.
-select-the-scope-of-your-segment=Select the scope of your segment to specify where it can be used. (Automatic Copy)
+select-the-scope-of-your-segment-to-specify-where-it-can-be-used=Select the scope of your segment to specify where it can be used. It will not be possible to modify the scope after the segment is saved. (Automatic Copy)
 select-the-searchable-types-description=Select the assets and objects to be searched. If no types are selected, all are searched. To disable all types, disable the search framework indexer clauses setting. (Automatic Copy)
 select-the-sites-where-this-role-can-perform-the-x-action-on-the-x-portlet=Hautatu rol honek {1} portletean <em>{0}</em> akzioa burutu dezakeen guneak.
 select-the-sites-where-this-role-can-perform-the-x-action-on-the-x-resource=Hautatu rol honek {1} baliabidean <em>{0}</em> akzioa burutu dezakeen guneak.
