--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
@@ -14297,7 +14297,7 @@ select-the-scope-of-the-action-that-this-role-can-perform-on-the-portal=Valitse 
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x=Valitse roolin laajuus toiminnolle, jonka tämä rooli voi tehdä <em>{0}:lle</em>.
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x-portlet=Valitse roolin laajuus toiminnolle, jonka tämä rooli voi tehdä portletille <em>{0}</em>.
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x-resource=Valitse roolin laajuus toiminnolle, jonka tämä rooli voi tehdä resurssille <em>{0}</em>.
-select-the-scope-of-your-segment=Select the scope of your segment to specify where it can be used. (Automatic Copy)
+select-the-scope-of-your-segment-to-specify-where-it-can-be-used=Select the scope of your segment to specify where it can be used. It will not be possible to modify the scope after the segment is saved. (Automatic Copy)
 select-the-searchable-types-description=Valitse haettavat tyypit. Jos tyyppejä ei valita, kaikkia haettavia tyyppejä (sisältö ja objektit) haetaan.
 select-the-sites-where-this-role-can-perform-the-x-action-on-the-x-portlet=Valitse sivustot, minkä roolit voivat suorittaa <em>{0}</em> toiminnon {1} portletissa.
 select-the-sites-where-this-role-can-perform-the-x-action-on-the-x-resource=Valitse sivustot minkä roolit voivat suorittaa <em>{0}</em> toiminnon {1} resurssissa.
