--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr_CA.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr_CA.properties
@@ -14298,7 +14298,7 @@ select-the-scope-of-the-action-that-this-role-can-perform-on-the-portal=Sélecti
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x=Sélectionner la portée que l'action que ce rôle peut effectuer sur le <em>{0}</em>.
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x-portlet=Sélectionner la portée de l'action que ce rôle peut effectuer sur l'application <em>{0}</em>.
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x-resource=Sélectionner la portée de l'action que ce rôle peut effectuer sur la ressource <em>{0}</em>.
-select-the-scope-of-your-segment=Select the scope of your segment to specify where it can be used. (Automatic Copy)
+select-the-scope-of-your-segment-to-specify-where-it-can-be-used=Select the scope of your segment to specify where it can be used. It will not be possible to modify the scope after the segment is saved. (Automatic Copy)
 select-the-searchable-types-description=Select the assets and objects to be searched. If no types are selected, all are searched. To disable all types, disable the search framework indexer clauses setting. (Automatic Copy)
 select-the-sites-where-this-role-can-perform-the-x-action-on-the-x-portlet=Sélectionner les sites où le rôle peut exécuter <em>{0}</em> actions sur le portlet {1}.
 select-the-sites-where-this-role-can-perform-the-x-action-on-the-x-resource=Sélectionner les sites où le rôle peux exécuter l'action <em>{0}</em> sur la ressource {1}.
