--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
@@ -14299,7 +14299,7 @@ select-the-scope-of-the-action-that-this-role-can-perform-on-the-portal=Selezion
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x=Seleziona l'ambito dell'azione che questo ruolo può effettuare su <em>{0}</em>.
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x-portlet=Seleziona l'ambito dell'azione che questo ruolo può effettuare sul portlet <em>{0}</em>.
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x-resource=Seleziona l'ambito dell'azione che questo ruolo può effettuare sulla risorsa <em>{0}</em>.
-select-the-scope-of-your-segment=Select the scope of your segment to specify where it can be used. (Automatic Copy)
+select-the-scope-of-your-segment-to-specify-where-it-can-be-used=Select the scope of your segment to specify where it can be used. It will not be possible to modify the scope after the segment is saved. (Automatic Copy)
 select-the-searchable-types-description=Select the assets and objects to be searched. If no types are selected, all are searched. To disable all types, disable the search framework indexer clauses setting. (Automatic Copy)
 select-the-sites-where-this-role-can-perform-the-x-action-on-the-x-portlet=Seleziona i siti sui quali questo ruolo può eseguire l'azione <em>{0}</em> sulla portlet {1}.
 select-the-sites-where-this-role-can-perform-the-x-action-on-the-x-resource=Seleziona i siti sui quali questo ruolo può eseguire l'azione <em>{0}</em> sulla risorsa {1}.
