--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
@@ -14298,7 +14298,7 @@ select-the-scope-of-the-action-that-this-role-can-perform-on-the-portal=Velg vir
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x=Velg virkeområdet til handligen denne rollen kan bruke på <em>{0}</em>.
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x-portlet=Velg virkeområdet til handlingen denne rollen kan bruke på <em>{0}</em> portletet.
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x-resource=Velg virkeområdet til handlignen denne rollen kan bruke på <em>{0}</em> ressursen.
-select-the-scope-of-your-segment=Select the scope of your segment to specify where it can be used. (Automatic Copy)
+select-the-scope-of-your-segment-to-specify-where-it-can-be-used=Select the scope of your segment to specify where it can be used. It will not be possible to modify the scope after the segment is saved. (Automatic Copy)
 select-the-searchable-types-description=Select the assets and objects to be searched. If no types are selected, all are searched. To disable all types, disable the search framework indexer clauses setting. (Automatic Copy)
 select-the-sites-where-this-role-can-perform-the-x-action-on-the-x-portlet=Velg nettstedene hvor denne rollen kan gjennomføre <em>{0}</em>-handlingen på {1} portletet.
 select-the-sites-where-this-role-can-perform-the-x-action-on-the-x-resource=Velg nettstedene hvor denne rollen kan utføre <em>{0}</em>-handlingen på {1}-ressursen.
