--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl_BE.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl_BE.properties
@@ -14301,7 +14301,7 @@ select-the-scope-of-the-action-that-this-role-can-perform-on-the-portal=Selectee
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x=Selecteer het bereik van de actie die deze rol kan uitvoeren op de <em>{0}</em>.
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x-portlet=Selecteer het bereik van de actie die deze rol kan uitvoeren op de <em>{0}</em> portlet.
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x-resource=Selecteer het bereik van de actie die deze rol kan uitvoeren op het <em>{0}</em> bron.
-select-the-scope-of-your-segment=Select the scope of your segment to specify where it can be used. (Automatic Copy)
+select-the-scope-of-your-segment-to-specify-where-it-can-be-used=Select the scope of your segment to specify where it can be used. It will not be possible to modify the scope after the segment is saved. (Automatic Copy)
 select-the-searchable-types-description=Select the assets and objects to be searched. If no types are selected, all are searched. To disable all types, disable the search framework indexer clauses setting. (Automatic Copy)
 select-the-sites-where-this-role-can-perform-the-x-action-on-the-x-portlet=Sites selecteren waar deze rol de <em>{0}</em> actie op de {1} portlet kan uitvoeren.
 select-the-sites-where-this-role-can-perform-the-x-action-on-the-x-resource=Sites selecteren waar deze rol de <em>{0}</em> actie op de {1} bron kan uitvoeren.
