--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
@@ -14298,7 +14298,7 @@ select-the-scope-of-the-action-that-this-role-can-perform-on-the-portal=Välj om
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x=Välj omfång för aktiviteten som denna roll kan utföra på <em>{0}</em>.
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x-portlet=Välj omfång för aktiviteten som denna roll kan utföra på <em>{0}</em>-portleten.
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x-resource=Välj omfång för aktiviteten som denna roll kan utföra på <em>{0}</em>-resursen.
-select-the-scope-of-your-segment=Välj omfattning för ditt segment för att specificera var det kan användas.
+select-the-scope-of-your-segment-to-specify-where-it-can-be-used=Select the scope of your segment to specify where it can be used. It will not be possible to modify the scope after the segment is saved. (Automatic Copy)
 select-the-searchable-types-description=Välj sökbara typer. Om inga typer väljs kommer alla sökbara typer (resurser och objekt) att sökas.
 select-the-sites-where-this-role-can-perform-the-x-action-on-the-x-portlet=Välj de webbplatser där den här rollen kan utföra åtgärden <em>{0}</em> på portlet {1}.
 select-the-sites-where-this-role-can-perform-the-x-action-on-the-x-resource=Välj de webbplatser där den här rollen kan utföra åtgärden <em>{0}</em> på resursen {1}.
